fix: white space

--- a/styles.css
+++ b/styles.css
@@ -775,6 +775,14 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-10{
+  padding-bottom: 2.5rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
 .text-center{
   text-align: center;
 }
